[metadata]
name = django-dev-admin
version = 0.1
description = A Django app to help developers login to root user or other user without remember password.
long_description = file: README.rst
url = https://github.com/smithkre/django-dev-admin/
author = Smith Krengkrud
author_email = smith.kre@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.4

[options]
include_package_data = true
packages = find: