[metadata]
name = django-dev-admin
version = 1.1.0
description-file = README.md
description = A Django app to help developers login to any user via django command.
long_description = file: README.md
url = https://github.com/smithkre/django-dev-admin/
author = Smith Krengkrud
author_email = smith.kre@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[options]
include_package_data = true
packages = find: